--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^8.4.3",
     "js-cookie": "^2.2.1",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "nuxt": "^2.15.3"
   },
   "devDependencies": {
