--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "js-cookie": "^2.2.1",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "nuxt": "^2.15.3"
   },
   "devDependencies": {
